# iof

./: .gitignore  CMakeLists.txt  cmd.h  components.h  entity.h  faction.h  math.h  player.h  settings.h  tile.h  world.c  world.h
render/: control.h  main.c  renderer.c  renderer.h
